# klar

./: .gitignore  CLAUDE.md  LANGUAGE_SPEC.md  README.md
compiler/: Cargo.toml  README.md
compiler/benchmark/: README.md
compiler/benchmark/results/: benchmark_20260330_123723.json  benchmark_20260330_123944.json
compiler/benchmark/runner/: run.py
compiler/benchmark/tasks/: 001_hello_world.yaml  002_fizzbuzz.yaml  003_fibonacci.yaml  004_is_palindrome.yaml  005_factorial.yaml  006_max_of_three.yaml  007_reverse_string.yaml  008_count_vowels.yaml  009_title_case.yaml  010_truncate.yaml  011_remove_dup_chars.yaml  012_sum_list.yaml  013_find_max.yaml  014_deduplicate.yaml  015_flatten.yaml  016_group_by_parity.yaml  017_json_round_trip.yaml  018_extract_field.yaml  019_build_json.yaml  020_safe_divide.yaml  021_parse_or_default.yaml  022_retry_pattern.yaml  023_word_frequency.yaml  024_caesar_cipher.yaml  025_temperature_converter.yaml  026_simple_calculator.yaml
compiler/crates/klar-ast/: Cargo.toml
compiler/crates/klar-ast/src/: lib.rs
compiler/crates/klar-codegen-js/: Cargo.toml
compiler/crates/klar-codegen-js/src/: lib.rs
compiler/crates/klar-codegen-llvm/: Cargo.toml
compiler/crates/klar-codegen-llvm/src/: lib.rs  runtime.rs
compiler/crates/klar-compiler/: Cargo.toml
compiler/crates/klar-compiler/src/: lib.rs  main.rs
compiler/crates/klar-lexer/: Cargo.toml
compiler/crates/klar-lexer/src/: lexer.rs  lib.rs  span.rs  tests.rs  token.rs
compiler/crates/klar-lsp/: Cargo.toml
compiler/crates/klar-lsp/src/: main.rs
compiler/crates/klar-parser/: Cargo.toml
compiler/crates/klar-parser/src/: lib.rs  parser.rs  tests.rs
compiler/crates/klar-pkg/: Cargo.toml
compiler/crates/klar-pkg/src/: lib.rs  (+1 more)
compiler/crates/klar-runtime/: Cargo.toml
compiler/crates/klar-typeck/: Cargo.toml
compiler/docs/: README.md  architecture.md  backends.md  cli.md  contributing.md  diagnostics.md  formatting.md  lsp.md  package-manager.md
compiler/editors/vscode/: language-configuration.json  package.json
compiler/examples/: bench_fib  bench_fib.js  bench_fib.klar  demo.klar  enums.klar  factorial.klar  fibonacci.klar  hello.klar  http_server.js  http_server.klar  native_hello  native_hello.js  native_hello.klar  native_test  native_test.klar  options.klar  pipes.klar  primes.klar  schema_demo.klar  stdlib_demo.klar  temperature.klar  url_shortener.js  url_shortener.klar
compiler/templates/: cursorrules
(+43 files in other folders)
