[package]
name = "klar-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "klar-lsp"
path = "src/main.rs"

[dependencies]
klar-lexer = { path = "../klar-lexer" }
klar-ast = { path = "../klar-ast" }
klar-parser = { path = "../klar-parser" }
klar-typeck = { path = "../klar-typeck" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
