[package]
name = "klar-typeck"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
klar-lexer = { path = "../klar-lexer" }
klar-ast = { path = "../klar-ast" }
thiserror = { workspace = true }

[dev-dependencies]
klar-parser = { path = "../klar-parser" }
